# DSI-Bench

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: standard-image-build.yml
benchmarks/: benchmarks.py
benchmarks/benchmarks/: benchmarks.py
configs/: icon.yaml  imagenet.yaml  oadat.yaml  shapenet.yaml  test.yaml
configs/configs/: icon.yaml  imagenet.yaml  oadat.yaml  shapenet.yaml  test.yaml
dsi_bench/: consumers.py  illustrator.py  parse.py
dsi_bench/datasets/: icon.py  oadat.py  shapenet.py  test.py
dsi_bench/dsi_bench/: illustrator.py  parse.py
dsi_bench/dsi_bench/datasets/: imagenet.py  shapenet.py
environment/: environment.yml  install-env.sh
environment/environment/: environment.yml
paper/paper_results/: create_graphs.py
paper/paper_results/cpu-node_ICON/: raw_results.json
paper/paper_results/cpu-node_ImageNet/: raw_results.json
paper/paper_results/cpu-node_OADAT/: raw_results.json
paper/paper_results/cpu-node_ShapeNet/: raw_results.json
paper/paper_results/cpu-node_TEST/: raw_results.json
paper/paper_results/gpu-node_ICON/: raw_results.json
paper/paper_results/gpu-node_ImageNet/: raw_results.json
paper/paper_results/gpu-node_OADAT/: raw_results.json
paper/paper_results/gpu-node_ShapeNet/: raw_results.json
paper/paper_results/gpu-node_TEST/: raw_results.json
