[tool.poetry]
name = "dsi-bench"
version = "0.1.0"
description = "Framework to measure DSI performance of different data loaders and storage formats"
authors = ["Jan Hochstrasser <jhochstrasse@ethz.ch>","Firat Özdemir <firat.ozdemir@sdsc.ethz.ch>", "Isinsu Katircioglu <isinsu.katircioglu@epfl.ch>","Matthias Meyer <matthias.meyer@sdsc.ethz.ch>"]
readme = "README.md"
packages = [{include = "dsi_bench"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".asv",
    ".renku",
    ".vscode",
    ".git",
    ".tmp",
    ".ruff_cache",
    "__pycache__"
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tab"